Добавлен хедер на главную сттраницу

--- a/index.html
+++ b/index.html
@@ -6,7 +6,81 @@
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    <header class="main-header">
+      <!-- Logo-->
+      <a class="logo" href="index.html" aria-current="page">
+        <img class="logo" src="images/logo.svg" width="145" height="36" alt="Логотип сайта Девайс">
+      </a>
+
+      <!-- навигация для всей шапки, кроме лого ??-->
+      <ul class="navigation-list">
+        <li class="navigation-item">
+          <form class="search-navigation-form">
+            <label class="visually-hidden" for="search-navigation">
+              Поиск
+            </label>
+            <input class="field" id="search-navigation" type="text" name="search-navigation" placeholder="Поиск по сайту">
+            <button class="search-button" type="submit">
+              Найти
+            </button>
+          </form>
+        </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="">Войти</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="">Сравнить</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="">Корзина</a>
+          </li>
+      </ul>
+
+      <a class="catalog-toggler">Каталог товаров</span>
+      <ul class="catalog-toggler-list">
+        <li class="catalog-toggler-item">
+          Виртуальная реальность
+        </li>
+        <li class="catalog-toggler-item">
+          Моноподы для cелфи
+        </li>
+        <li class="catalog-toggler-item">
+          Экшн-камеры
+        </li>
+        <li class="catalog-toggler-item">
+          Фитнес-браслеты
+        </li>
+        <li class="catalog-toggler-item">
+          Умные часы
+        </li>
+        <li class="catalog-toggler-item">
+          Квадрокоптеры
+        </li>
+      </ul>
+
+      <ul class="menu">
+        <li class="menu-item">
+          Доставка
+        </li>
+        <li class="menu-item">
+          Гарантия
+        </li>
+        <li class="menu-item">
+          Контакты
+        </li>
+      </ul>
+
+    </header>
+
+    <main>
+
+
+
+    </main>
+
+    <footer>
+
+    </footer>
 
   </body>
 </html>
