--- a/index.html
+++ b/index.html
@@ -25,51 +25,52 @@
       <nav class="navigation">
         <ul class="personal-list">
             <li class="personal-item">
-              <a class="personal-link" href="">Войти</a>
+              <a class="personal-link" href="#">Войти</a>
             </li>
             <li class="personal-item">
-              <a class="personal-link" href="">Сравнить</a>
+              <a class="personal-link" href="#">Сравнить</a>
             </li>
             <li class="personal-item">
-              <a class="personal-link" href="">Корзина</a>
+              <span class="baskets">
+                2
+              </span>
+              <a class="personal-link" href="#">Корзина</a>
             </li>
         </ul>
         <!-- Меню каталог с выпадающим подменю-->
-        <ul class="menu-navigation">
-          <li>
-          Каталог товаров
+        <ul class="navigation-menu">
+          <li class="navigation-menu-item has-submenu">
+            <a href="catalog.html">Каталог товаров</a>
+            <ul class="submenu">
+              <li class="submenu-item">
+                Виртуальная реальность
+              </li>
+              <li class="submenu-item">
+                Моноподы для cелфи
+              </li>
+              <li class="submenu-item">
+                Экшн-камеры
+              </li>
+              <li class="submenu-item">
+                Фитнес-браслеты
+              </li>
+              <li class="submenu-item">
+                Умные часы
+              </li>
+              <li class="submenu-item">
+                Квадрокоптеры
+              </li>
+            </ul>
           </li>
-          <ul class="catalog-toggler-list">
-            <li class="catalog-toggler-item">
-              Виртуальная реальность
-            </li>
-            <li class="catalog-toggler-item">
-              Моноподы для cелфи
-            </li>
-            <li class="catalog-toggler-item">
-              Экшн-камеры
-            </li>
-            <li class="catalog-toggler-item">
-              Фитнес-браслеты
-            </li>
-            <li class="catalog-toggler-item">
-              Умные часы
-            </li>
-            <li class="catalog-toggler-item">
-              Квадрокоптеры
-            </li>
-          </ul>
-          <!-- Меню вторая часть-->
-          <ul class="menu">
-            <li class="menu-item">
-              Доставка
-            </li>
-            <li class="menu-item">
-              Гарантия
-            </li>
-            <li class="menu-item">
-              Контакты
-            </li>
+          <li class="navigation-menu-item">
+            Доставка
+          </li>
+          <li class="navigation-menu-item">
+            Гарантия
+          </li>
+          <li class="navigation-menu-item">
+            Контакты
+          </li>
         </ul>
       </nav>
     </header>
