--- a/catalog.html
+++ b/catalog.html
@@ -267,28 +267,28 @@
         <ul  class="product-list">
           <li class="product-card">
             <a class="product-link" href="#">
-              <img class="product-image" src="" alt="">
+              <img class="product-image" src="images/product-1.png" width="360" height="380" alt="">
               <p class="product-text">Любительская селфи-палка</p>
               <p class="product-price">500 ₽</p>
             </a>
           </li>
           <li class="product-card has-new">
             <a class="product-link" href="#">
-              <img class="product-image" src="" alt="">
+              <img class="product-image" src="images/product-2.png" width="360" height="380" alt="">
               <p class="product-text">Профессиональная селфи-палка</p>
               <p class="product-price">1 500 ₽</p>
             </a>
           </li>
           <li class="product-card">
             <a class="product-link" href="#">
-              <img class="product-image" src="" alt="">
+              <img class="product-image" src="images/product-3.png" width="360" height="380" alt="">
               <p class="product-text">Непотопляемая селфи-палка</p>
               <p class="product-price">2 500 ₽</p>
             </a>
           </li>
           <li class="product-card">
             <a class="product-link" href="#">
-              <img class="product-image" src="" alt="">
+              <img class="product-image" src="images/product-4.png" width="360" height="380" alt="">
               <p class="product-text">Селфи-палка «Следуй за мной»</p>
               <p class="product-price">500 ₽</p>
             </a>
